tests/baselines/reference/computedPropertyNames24_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames24_ES5.ts(7,6): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames24_ES5.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        [super.bar()]() { }
         ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
    }